Done with the About Section

--- a/index.html
+++ b/index.html
@@ -55,12 +55,6 @@
             height: 100px;
             background-color: darkslateblue;
         }
-
-        canvas {
-            cursor: normal;
-            display: none;
-            transform: translateX(-33%) translateY(-50px);
-        }
     </style>
 </head>
 
@@ -117,18 +111,18 @@
 
     <!-- About Section -->
     <section id="about_section">
-        <div class="container pt-5">
+        <div class="container pt-5 pb-lg-0 pb-5">
             <div class="row">
                 <!-- Nodes Logo -->
-                <div class="col-lg-5 offset-lg-1">
+                <div class="col-lg-5 offset-lg-1" id="isohack_canvas_box">
                     <canvas id='canvas'></canvas>
                 </div>
 
                 <!-- About Content -->
-                <div class="col-lg-6">
-                    <h3 class="about_us_heading mb-4">Contest of neural networks and IT products using them</h3>
+                <div class="col-lg-6 col-md-10 offset-lg-0 offset-md-2">
+                    <h3 class="about_us_heading mb-sm-4 mb-3">Contest of neural networks and IT products using them</h3>
 
-                    <div class="row pt-5">
+                    <div class="row pt-sm-4 pt-3">
                         <div class="col-2 about_division"></div>
                         <div class="col-10">
                             <p class="about_content pl-3">
