--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/scrollbar.css" />
     <link rel="stylesheet" href="./css/about.css" />
+    <link rel="stylesheet" href="./css/home.css" />
+    
 
     <style>
         /* Temporary Style */
@@ -26,12 +28,7 @@
             background-color: darkgray;
         }
 
-        section.headline_home {
-            height: 350px;
-            background-color: lightblue;
-        }
-
-        section.previous_year_event {
+         section.previous_year_event {
             height: 350px;
             background-color: darkcyan;
         }
@@ -106,7 +103,12 @@
 
     <!-- Headline Home Section -->
     <section class="headline_home" id="headline_section">
-        <h3>Headline, Deadline Home Section</h3>
+         <div id="app">
+            <div id="wrapper">
+                <h1 class="glitch"> Isohack2.0</h1>
+                <h1 class="glitch" data-text="hackathon"></h1>
+            </div>
+        </div>
     </section>
 
     <!-- About Section -->
