--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="./css/isohack1_O.css" />
     <link rel="stylesheet" href="./css/gallery.css" />
     <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/glitch_font01.css">
 
 
     <style>
@@ -134,7 +135,7 @@
     <section id="about_section">
         <div class="container pt-5 pb-lg-0 pb-5">
             <!-- Section Heading -->
-            <h3 class="section_heading"><span>About The Event</span></h3>
+            <h3 class="section_heading glitch-font" data-text="ABOUT THE EVENT"><span class="glitch-font-h3">ABOUT THE EVENT</span></h3>
 
             <!-- About Content -->
             <div class="row">
@@ -172,7 +173,7 @@
     <section class="previous_year_event" id="previous_year_event">
         <div class="container pb-5">
             <!-- Section Heading -->
-            <h3 class="section_heading"><span>Isohack 1.O</span></h3>
+            <h3 class="section_heading glitch-font" data-text="ISOHACK 1.0"><span class="glitch-font-h3">Isohack 1.O</span></h3>
 
             <!-- Isohack Year 2019 -->
             <div class="row">
@@ -259,7 +260,7 @@
     <section class="isohack_gallery_section mt-4" id="isohack_gallery_section">
         <div class="container">
             <!-- Heading -->
-            <h3 class="section_heading"><span>Isohack Gallery</span></h3>
+            <h3 class="section_heading glitch-font" data-text="ISOHACK GALLERY"><span class="glitch-font-h3">Isohack Gallery</span></h3>
 
             <!-- Gallery Content -->
             <div class="row">
@@ -356,7 +357,7 @@
     <section id="faq_section">
         <div class="container py-5">
             <!-- Heading -->
-            <h3 class="section_heading"><span>F.A.Q</span></h3>
+            <h3 class="section_heading glitch-font" data-text="F.A.Q"><span class="glitch-font-h3">F.A.Q</span></h3>
 
             <!-- Questions -->
             <div class="row" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100">
