--- a/index.html
+++ b/index.html
@@ -25,16 +25,8 @@
     <link rel="stylesheet" href="./css/faq.css" />
     <link rel="stylesheet" href="./css/isohack1_O.css" />
     <link rel="stylesheet" href="./css/gallery.css" />
-    <link rel="stylesheet" href="./css/footer.css">
-    <link rel="stylesheet" href="./css/glitch_font01.css">
-
-
-    <style>
-        footer.footer_section {
-            height: 100px;
-            background-color: darkslateblue;
-        }
-    </style>
+    <link rel="stylesheet" href="./css/footer.css" />
+    <link rel="stylesheet" href="./css/glitch_font01.css" />
 </head>
 
 <body>
@@ -223,7 +215,7 @@
             </div>
 
             <!-- Isohack 2019 Winners -->
-            <div class="row mt-4">
+            <div class="row my-4">
                 <div class="col-md-4 offset-md-2 col-sm-6 col-12">
                     <img class="myImg winners_gallery" src="./img/trophy/winner2.jpg" alt="Winners" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" />
 
@@ -282,7 +274,7 @@
                         <div class="col-sm-4 col-12 mb-2 px-0">
                             <figure>
                                 <!-- Trigger the Modal -->
-                                <img class="myImg" src="./img/gallery/gallery3.jpg" alt="Great Things never came from comfort zones">
+                                <img class="myImg" src="./img/gallery/gallery3.jpg" alt="Great Things never came from comfort zones" />
 
                                 <!-- The Modal -->
                                 <div class="myModal gallery-modal">
@@ -502,21 +494,18 @@
 
 
     <!-- || Footer Section [START] -->
-    <section class="footer_section">
+    <section class="footer-section">
         <footer class="footer-distributed">
 
             <div class="footer-right">
-
                 <a href="https://www.facebook.com/isohack.skitm/" target="_blank"><i class="fa fa-facebook"></i></a>
                 <a href="https://twitter.com/IsoHack2_0" target="_blank"><i class="fa fa-twitter"></i></a>
                 <a href="https://www.linkedin.com/in/isohack-hackathon-15b492201/" target="_blank"><i class="fa fa-linkedin"></i></a>
                 <a href="https://www.instagram.com/isohack2.0/" target="_blank"><i class="fa fa-instagram"></i></a>
-
             </div>
 
             <div class="footer-left">
-
-                <p>IsoHack 2.0 &copy; 2020</p>
+                <span>IsoHack 2.0 &copy; 2020</span>
             </div>
 
         </footer>
