--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
         <section id="about_section">
             <div class="container pt-5 pb-lg-0 pb-5">
                 <!-- Section Heading -->
-                <h3 class="section_heading glitch-font" data-text="ABOUT THE EVENT"><span class="glitch-font-h3">ABOUT
-                        THE
-                        EVENT</span></h3>
+                <h3 class="section_heading glitch-font" data-text="ABOUT THE EVENT" data-aos="fade-up">
+                    <span class="glitch-font-h3">ABOUT THE EVENT</span>
+                </h3>
 
                 <!-- About Content -->
                 <div class="row">
