--- a/index.html
+++ b/index.html
@@ -213,8 +213,9 @@
         <section class="previous_year_event" id="previous_year_event">
             <div class="container pt-4 pb-5">
                 <!-- Section Heading -->
-                <h3 class="section_heading glitch-font" data-text="ISOHACK 1.0"><span class="glitch-font-h3">Isohack
-                        1.O</span></h3>
+                <h3 class="section_heading glitch-font" data-text="ISOHACK 1.0" data-aos="fade-up">
+                    <span class="glitch-font-h3">Isohack 1.O</span>
+                </h3>
 
                 <!-- Isohack Year 2019 -->
                 <div class="row">
@@ -301,8 +302,9 @@
         <section class="isohack_gallery_section py-4 mt-4" id="isohack_gallery_section">
             <div class="container">
                 <!-- Heading -->
-                <h3 class="section_heading glitch-font" data-text="ISOHACK GALLERY"><span class="glitch-font-h3">Isohack
-                        Gallery</span></h3>
+                <h3 class="section_heading glitch-font" data-text="ISOHACK GALLERY" data-aos="fade-up">
+                    <span class="glitch-font-h3">Isohack Gallery</span>
+                </h3>
 
                 <!-- Gallery Content -->
                 <div class="row">
@@ -468,7 +470,9 @@
         <section id="faq_section" class="pt-lg-5">
             <div class="container pt-4 pb-5">
                 <!-- Heading -->
-                <h3 class="section_heading glitch-font" data-text="F.A.Q"><span class="glitch-font-h3">F.A.Q</span></h3>
+                <h3 class="section_heading glitch-font" data-text="F.A.Q" data-aos="fade-up">
+                    <span class="glitch-font-h3">F.A.Q</span>
+                </h3>
 
                 <!-- Questions -->
                 <div class="row" data-aos="fade-up">
