Removed Youtube Button, Checked Linkedin Handle

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             <a href="https://www.linkedin.com/in/isohack-hackathon-15b492201/" target="_blank"><i
                     class="fa fa-linkedin"></i></a>
             <a href="https://www.instagram.com/isohack2.0/" target="_blank"><i class="fa fa-instagram"></i></a>
-            <a href="https://www.youtube.com/channel/UCRC_P_qWAUUlxd_P05BRtIw" target="_blank"><i
-                    class="fa fa-youtube"></i></a>
+            <!-- <a href="https://www.youtube.com/channel/UCRC_P_qWAUUlxd_P05BRtIw" target="_blank"><i
+                    class="fa fa-youtube"></i></a> -->
         </div>
     </div>
 
@@ -818,7 +818,7 @@
                                 <!-- Email Address -->
                                 <div class="col-sm-6 col-12 mt-md-4 mt-4 py-sm-4 py-2">
                                     <h5 class="contact_detail_head">Email Address</h5>
-                                    <p><a href="mailto:atc.isohack@gmail.com">atc.isohack@gmail.com</a></p>
+                                    <p><a href="mailto:skitm.isohack@gmail.com">skitm.isohack@gmail.com</a></p>
                                 </div>
                             </div>
 
@@ -843,8 +843,8 @@
                     <a href="https://www.linkedin.com/in/isohack-hackathon-15b492201/" target="_blank"><i
                             class="fa fa-linkedin"></i></a>
                     <a href="https://www.instagram.com/isohack2.0/" target="_blank"><i class="fa fa-instagram"></i></a>
-                    <a href="https://www.youtube.com/channel/UCRC_P_qWAUUlxd_P05BRtIw" target="_blank"><i
-                            class="fa fa-youtube"></i></a>
+                    <!-- <a href="https://www.youtube.com/channel/UCRC_P_qWAUUlxd_P05BRtIw" target="_blank"><i
+                            class="fa fa-youtube"></i></a> -->
                 </div>
 
                 <div class="footer-left">
