--- a/index.html
+++ b/index.html
@@ -756,8 +756,15 @@
                         </div>
                         <div class="col-lg-3 col-sm-4 col-6">
                             <div class="sponsors_link" data-aos="fade-up">
-                                <a href="https://booksquirrelpublication.com/" target="_blank">
-                                    <img src="./img/sponsors/book_squirrel.png" alt="Book Squirrel Publication" />
+                                <a href="https://www.facebook.com/chicagopizzaindore/" target="_blank">
+                                    <img src="./img/sponsors/chicago_pizza.png" alt="Chicago Pizza" />
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-4 col-6">
+                            <div class="sponsors_link" data-aos="fade-up">
+                                <a href="https://www.cloudflare.com/en-in/" target="_blank">
+                                    <img src="./img/sponsors/cloudfare.png" alt="Cloudfare" />
                                 </a>
                             </div>
                         </div>
@@ -772,6 +779,13 @@
                             <div class="sponsors_link" data-aos="fade-up">
                                 <a href="https://pr24x7.com/crisis-communications-agency/" target="_blank">
                                     <img src="./img/sponsors/pr_24x7.png" alt="PR 24x7" />
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-4 col-6">
+                            <div class="sponsors_link" data-aos="fade-up">
+                                <a href="https://booksquirrelpublication.com/" target="_blank">
+                                    <img src="./img/sponsors/book_squirrel.png" alt="Book Squirrel Publication" />
                                 </a>
                             </div>
                         </div>
@@ -798,7 +812,7 @@
 
         <!-- || Contact Section [START] -->
         <section id="contact_section" class="py-lg-5">
-            <div class="container py-5">
+            <div class="container pt-5">
                 <!-- Heading -->
                 <h3 class="section_heading glitch-font" data-text="Contact Us" data-aos="fade-up">
                     <span class="glitch-font-h3">Contact Us</span>
