--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                             </div>
                             <div class="col-8 winners_details_box">
                                 <div class="winners_details">
-                                    <h6 class="pr-4"><span>Team Name -</span> CMBK</h6>
+                                    <h6 class="pr-4"><span>Team Name -</span> CBKM</h6>
                                     <h6><span>Prize Money -</span> Rs.5000</h6>
                                 </div>
                             </div>
