--- a/index.html
+++ b/index.html
@@ -695,121 +695,63 @@
         <!-- || Sponsors Section [START] -->
         <section class="sponsors_section pt-lg-5" id="sponsors_section">
             <!-- Heading -->
-            <h3 class="section_heading glitch-font mt-5" data-text="Isohack1.O Sponsors" data-aos="fade-up">
-                <span class="glitch-font-h3">Isohack1.O Sponsors</span>
+            <h3 class="section_heading glitch-font mt-5" data-text="Sponsors" data-aos="fade-up">
+                <span class="glitch-font-h3">Sponsors</span>
             </h3>
 
             <!-- Content -->
             <div class="container">
                 <div class="col-md-10 offset-md-1">
-                    <div class="row pt-md-5 pt-4">
-                        <div class="col-lg-3 col-sm-4 col-6">
-                            <div class="sponsors_link" data-aos="fade-up">
+                    <div class="row pt-md-4 pt-3 mx-auto">
+                        <!-- Devfolio Main -->
+                        <div class="col-xl-4 offset-xl-4 col-lg-6 offset-lg-3 col-md-6 offset-md-3 col-10 offset-1">
+                            <div class="sponsors_link mb-md-0 mb-3" data-aos="fade-up">
                                 <a href="https://devfolio.co/signup/" target="_blank">
                                     <img src="./img/sponsors/devfolio.png" alt="Devfolio" />
                                 </a>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-sm-4 col-6">
-                            <div class="sponsors_link" data-aos="fade-up">
-                                <a href="https://github.com/" target="_blank">
-                                    <img src="./img/sponsors/github.png" alt="Github" />
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-4 col-6">
-                            <div class="sponsors_link" data-aos="fade-up">
-                                <a href="https://slack.com/intl/en-in/" target="_blank">
-                                    <img src="./img/sponsors/slack.png" alt="Slack" />
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-4 col-6">
-                            <div class="sponsors_link" data-aos="fade-up">
-                                <a href="https://matic.network/" target="_blank">
-                                    <img src="./img/sponsors/matic.png" alt="Matic" />
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-4 col-6">
-                            <div class="sponsors_link" data-aos="fade-up">
-                                <a href="https://www.madeeasy.in/" target="_blank">
-                                    <img src="./img/sponsors/made_easy.png" alt="Made Easy" />
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-4 col-6">
-                            <div class="sponsors_link" data-aos="fade-up">
-                                <a href="https://engineerbabu.com/" target="_blank">
-                                    <img src="./img/sponsors/engineerbabu.png" alt="EngineerBabu" />
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-4 col-6">
-                            <div class="sponsors_link" data-aos="fade-up">
-                                <a href="https://www.facebook.com/groups/DevCIndore/" target="_blank">
-                                    <img src="./img/sponsors/devC.png" alt="Developer Circles Facebook - Indore" />
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-4 col-6">
-                            <div class="sponsors_link" data-aos="fade-up">
-                                <a href="https://www.facebook.com/chicagopizzaindore/" target="_blank">
-                                    <img src="./img/sponsors/chicago_pizza.png" alt="Chicago Pizza" />
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-4 col-6">
-                            <div class="sponsors_link" data-aos="fade-up">
-                                <a href="https://www.cloudflare.com/en-in/" target="_blank">
-                                    <img src="./img/sponsors/cloudfare.png" alt="Cloudfare" />
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-4 col-6">
-                            <div class="sponsors_link" data-aos="fade-up">
-                                <a href="https://www.wittyfeed.tv/" target="_blank">
-                                    <img src="./img/sponsors/wittyfeed.png" alt="Wittyfeed" />
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-4 col-6">
-                            <div class="sponsors_link" data-aos="fade-up">
-                                <a href="https://pr24x7.com/crisis-communications-agency/" target="_blank">
-                                    <img src="./img/sponsors/pr_24x7.png" alt="PR 24x7" />
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-4 col-6">
-                            <div class="sponsors_link" data-aos="fade-up">
-                                <a href="https://booksquirrelpublication.com/" target="_blank">
-                                    <img src="./img/sponsors/book_squirrel.png" alt="Book Squirrel Publication" />
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-4 col-6">
-                            <div class="sponsors_link" data-aos="fade-up">
-                                <a href="https://www.hacksoc.in/" target="_blank">
-                                    <img src="./img/sponsors/hacksoc_indore.png" alt="Hacksoc Indore" />
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-4 col-6">
-                            <div class="sponsors_link" data-aos="fade-up">
-                                <a href="https://www.facebook.com/indoremerijaanofficial/" target="_blank">
-                                    <img src="./img/sponsors/indore.jpg" alt="Indore Meri Jaan" />
-                                </a>
+
+                        <!-- Row Divider -->
+                        <div class="w-100"></div>
+
+                        <!-- Other Sponsors -->
+                        <div class="row">
+                            <div class="col-xl-8 offset-xl-2">
+                                <div class="row">
+                                    <div class="col-lg-4 col-sm-4 col-6">
+                                        <div class="sponsors_link" data-aos="fade-up">
+                                            <a href="https://matic.network/" target="_blank">
+                                                <img src="./img/sponsors/matic.png" alt="Matic" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4 col-sm-4 col-6">
+                                        <div class="sponsors_link" data-aos="fade-up">
+                                            <a href="https://tezos.com/" target="_blank">
+                                                <img src="./img/sponsors/tezos.png" alt="Tezos" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4 col-sm-4 col-6">
+                                        <div class="sponsors_link" data-aos="fade-up">
+                                            <a href="https://www.portis.io/" target="_blank">
+                                                <img src="./img/sponsors/portis.png" alt="Portis" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- || Sponsors Section [END] -->
 
 
         <!-- || Contact Section [START] -->
-        <section id="contact_section" class="py-lg-5">
+        <section id="contact_section" class="py-lg-5 pt-4">
             <div class="container pt-5">
                 <!-- Heading -->
                 <h3 class="section_heading glitch-font" data-text="Contact Us" data-aos="fade-up">
@@ -820,7 +762,7 @@
                 <div class="row">
                     <div class="col-md-10 offset-md-1" data-aos="fade-up">
                         <div class="container">
-                            <div class="row pt-4">
+                            <div class="row pt-3">
                                 <!-- Mobile Number -->
                                 <div class="col-sm-6 col-12 mt-md-4 mt-4 py-sm-4 py-2 middle_contact_grid">
                                     <h5 class="contact_detail_head">Phone Number</h5>
