Sponsors Bug Fixing

--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
 
 
         <!-- || Contact Section [START] -->
-        <section id="contact_section" class="py-lg-5 pt-4">
+        <section id="contact_section" class="py-md-5">
             <div class="container pt-5">
                 <!-- Heading -->
                 <h3 class="section_heading glitch-font" data-text="Contact Us" data-aos="fade-up">
@@ -776,7 +776,7 @@
                                 </div>
                             </div>
 
-                            <div class="row mt-sm-5 mt-3 contact_social_box">
+                            <div class="row mt-sm-5 my-3 contact_social_box">
                                 <p class="contact_social_media">You Can Also Reach Us on Our Social Media Handles</p>
                             </div>
                         </div>
