--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
                         <!-- Devfolio Main -->
                         <div class="col-xl-4 offset-xl-4 col-lg-6 offset-lg-3 col-md-6 offset-md-3 col-10 offset-1">
                             <div class="sponsors_link mb-md-0 mb-3" data-aos="fade-up">
-                                <a href="http://devfolio.co/home" target="_blank">
+                                <a href="https://devfolio.co/home/" target="_blank">
                                     <img src="./img/sponsors/devfolio.png" alt="Devfolio" />
                                 </a>
                             </div>
