Added the Devfolio SDK but testing it

--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
                                 <a class="nav-link" href="#contact_section">Contact Us</a>
                             </li>
                             <li class="nav-item px-2">
-                                <a class="btn navbar_register_btn" href="#">Register</a>
+                                <div class="apply-button" data-hackathon-slug="YOUR-HACKATHON-SLUG"
+                                    data-button-theme="light" style="height: 44px; width: 212px"></div>
                             </li>
                         </ul>
                     </div>
@@ -796,8 +797,7 @@
                     <a href="https://twitter.com/IsoHack2_0" target="_blank"><i class="fa fa-twitter"></i></a>
                     <a href="https://www.linkedin.com/in/isohack-hackathon-15b492201/" target="_blank"><i
                             class="fa fa-linkedin"></i></a>
-                    <a href="https://www.instagram.com/isohack2.0/" target="_blank"><i
-                            class="fa fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/isohack2.0/" target="_blank"><i class="fa fa-instagram"></i></a>
                     <!-- <a href="https://www.youtube.com/channel/UCRC_P_qWAUUlxd_P05BRtIw" target="_blank"><i
                             class="fa fa-youtube"></i></a> -->
                 </div>
@@ -824,6 +824,9 @@
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://use.fontawesome.com/fce9801cfe.js"></script>
+
+    <!-- Devfolio SDK -->
+    <script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
 
     <script type="text/javascript" src="./js/libs/dat.gui.min.js" defer></script>
     <script type="text/javascript" src="./js/libs/animationFrame.js" defer></script>
