--- a/index.html
+++ b/index.html
@@ -181,10 +181,6 @@
                             <li class="nav-item px-2">
                                 <a class="nav-link" href="#contact_section">Contact Us</a>
                             </li>
-                            <li class="nav-item px-2">
-                                <div class="apply-button" data-hackathon-slug="YOUR-HACKATHON-SLUG"
-                                    data-button-theme="light" style="height: 44px; width: 212px"></div>
-                            </li>
                         </ul>
                     </div>
                 </nav>
@@ -200,6 +196,10 @@
 
                     <div class="row" data-aos="fade-up">
                         <h5 class="isohack_tagline">Let the Glitch make a difference</h5>
+                    </div>
+
+                    <div class="apply-button" data-hackathon-slug="XYZ" data-button-theme="light"
+                        style="height: 44px; width: 212px">
                     </div>
                 </div>
             </section>
