--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     </div>
 
                     <div class="row mt-5">
-                        <div class="apply-button" data-hackathon-slug="isohack-2.devfolio.co" data-button-theme="light"
+                        <div class="apply-button" data-hackathon-slug="isohack-2" data-button-theme="light"
                             style="height: 44px; width: 312px">
                         </div>
                     </div>
@@ -809,9 +809,6 @@
         </section>
         <!-- || Footer Section [END] -->
     </div>
-    
-    <!-- Devfolio SDK -->
-    <script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
 
     <!-- || Inbuilt Javascript Libraries -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -846,6 +843,9 @@
     <script src="./js/scrollbar.js" defer></script>
     <!-- <script src="./js/devfolio.js" defer></script> -->
     <script src="./js/gallery.js" defer></script>
+
+    <!-- Devfolio SDK -->
+    <script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
 </body>
 
 </html>
