--- a/index.html
+++ b/index.html
@@ -194,14 +194,14 @@
                         <h5 class="isohack_tagline">Let the Glitch make a difference</h5>
                     </div>
 
-                    <div class="row mt-3" data-aos="fade-up">
+                    <!-- <div class="row mt-3" data-aos="fade-up">
                         <h1 id="timer_field">
                             <span id="days">00</span> :
                             <span id="hours">00</span> :
                             <span id="minutes">00</span> :
                             <span id="seconds">00</span>
                         </h1>
-                    </div>
+                    </div> -->
 
                     <div class="row mt-5">
                         <div class="apply-button" data-hackathon-slug="isohack-2" data-button-theme="light"
@@ -874,7 +874,7 @@
 
     <!-- || Custom Script -->
     <script src="./js/navbar.js" defer></script>
-    <script src="./js/timer.js" defer></script>
+    <!-- <script src="./js/timer.js" defer></script> -->
     <script src="./js/scrollbar.js" defer></script>
     <script src="./js/gallery.js" defer></script>
 
